packages/tree-sitter-twig/grammar.js
    template: ($) => repeat($._source_element),

    _source_element: ($) =>
      choice($._statement, $.output, $.comment, $.var_declaration, $.content),

    output: $ => seq(
      alias(choice('{{', '{{-', '{{~'), 'embedded_begin'),
      optional($.expression),
      alias(choice('}}', '-}}', '~}}'), 'embedded_end')
    ),

    comment: $ => seq(
      alias('{#', 'comment_begin'),
      optional(
        repeat1(/.|\n|\r/),
      ),
      alias('#}', 'comment_end'),
    ),

    var_declaration: $ => seq(
      alias('{#', 'comment_begin'),
      seq(
        alias('@var', 'keyword'),
        field('variable', alias($.identifier, $.variable)),
        field('type', optional($._type)),
      ),
      alias('#}', 'comment_end'),
    ),

    _type: $ => choice(
      $._types,
      $.union_type,
      $.intersection_type,
      $.disjunctive_normal_form_type,
    ),

    _types: $ => choice(
      $.optional_type,
      $.qualified_name,
      $.primitive_type,
      $.incomplete_type,
      $.array_type,
    ),

    incomplete_type: $ => choice(
      $._incomplete_primitive_type,
      $._incomplete_qualified_name,
    ),

    _incomplete_primitive_type: $ => /[a-z]+/,
    primitive_type: _ => choice(
      'array',
      keyword('callable'), // not legal in property types
      'iterable',
      'bool',
      'float',
      'int',
      'string',
      'void',
      'mixed',
      'false',
      'null',
      'true',
    ),

    array_type: $ => seq(
      choice(
        $.qualified_name,
        $.primitive_type,
      ),
      '[]',
    ),

    _incomplete_qualified_name: $ => $.namespace,
    qualified_name: $ => seq(
      $.namespace,
      $.php_identifier,
    ),

    namespace: $ => choice(
      '\\',
      seq(optional('\\'), $._namespace_name, '\\'),
    ),

    _namespace_name: $ => seq($.php_identifier, repeat(seq('\\', $.php_identifier))),
    php_identifier: $ => /[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*/,

    union_type: $ => pipeSep1($._types),

    intersection_type: $ => ampSep1($._types),

    parenthesized_expression: ($) => seq('(', $.expression, ')'),

    number: () => /[0-9]+(?:\.[0-9]+)?([Ee][\+\-][0-9]+)?/,
    boolean: () => choice('true', 'false', 'TRUE', 'FALSE'),
    string: () => /"([^#"\\]*(?:\\.[^#"\\]*)*)"|'([^'\\]*(?:\\.[^'\\]*)*)'/,
    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          '.',
          field('property', alias(choice($.identifier, /[0-9]+/), $.property)),
        ),
      ),

    call_expression: ($) =>
      choice(
        prec(
          'member',
          seq(
            field(
              'name',
              choice(alias($.identifier, $.function), $.primary_expression),
            ),
            field('arguments', $.arguments),
          ),
        ),
        prec(
          'call',
          seq(
            field(
              'name',
              choice(alias($.identifier, $.function), $.expression),
            ),
            field('arguments', $.arguments),
          ),
        ),
      ),

    arguments: ($) =>
      seq(
        '(',
        commaSep(field('argument', choice($.named_argument, $.expression))),
        ')',
      ),

    binary_expression: ($) => choice(
        .../** @type {const} */ ([
          ['or', 10],
          ['and', 15],
          ['b-or', 16],
          ['b-xor', 17],
          ['b-and', 18],
          ['==', 20],
          ['!=', 20],
          ['<=>', 20],
          ['<', 20],
          ['>', 20],
          ['>=', 20],
          ['<=', 20],
          ['not in', 20],
          ['in', 20],
          ['matches', 20],
          ['starts with', 20],
          ['ends with', 20],
          ['has some', 20],
          ['has every', 20],
          ['..', 25],
          ['+', 30],
          ['-', 30],
          ['~', 40],
          ['*', 60],
          ['/', 60],
          ['//', 60],
          ['%', 60],
          ['is', 100],
          ['is not', 100],
          ['is divisible by', 100],
          ['is same as', 100],
          ['**', 200, 'right'],
          ['??', 300, 'right'],
          ['???', 300, 'right'], // https://nystudio107.com/docs/empty-coalesce
        ]).map(([operator, precedence, associativity = 'left']) =>
          prec[associativity](
            precedence,
            seq(
              field('left', $.expression),
              field('operator', alias(operator, 'operator')),
              field('right', $.expression),
            ),
          ),
        ),
      ),

    if: ($) =>
      statement(
        $,
        alias('if', 'keyword'),
        optional(field('expr', $.expression)),
        source_elements($, 'then'),
        optional(field('elseif', repeat($.elseif))),
        optional(seq(alias('else', 'keyword'), source_elements($, 'else'))),
        alias('endif', 'keyword'),
      ),
