packages/tree-sitter-twig/corpus/tests.txt
==================
divisible by
==================
{% if loop.index is divisible by(3) %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (member_expression
        (variable)
        (property))
      (parenthesized_expression
        (number)))
    (source_elements
      (content))))

==================
same as parenthesized
==================
{% if foo.attribute is same as(false) %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (member_expression
        (variable)
        (property))
      (parenthesized_expression
        (boolean)))
    (source_elements
      (content))))

==================
same as
==================
{% if foo is same as false %}
  ...
{% endif %}
---
(template
  (if
    (binary_expression
      (variable)
      (boolean))
    (source_elements
      (content))))

==================
issue #18
==================
{% if app.request.query.get('email') is same as email.uuid %}open{% endif %}
---
(template
  (if
    (binary_expression
      (call_expression
        (member_expression
          (member_expression
            (member_expression
              (variable)
              (property))
            (property))
          (property))
        (arguments
          (string)))
      (member_expression
        (variable)
        (property)))
    (source_elements
      (content))))
