packages/tree-sitter-twig/corpus/var-comments.txt
==================
var declaration: int
==================
{# @var someVar int #}
---
(template
  (var_declaration
    (variable)
    (primitive_type)))

==================
var declaration: qualified_name
==================
{# @var someVar \Foo\Bar\Baz #}
---
(template
  (var_declaration
    (variable)
    (qualified_name
      (namespace
        (php_identifier)
        (php_identifier))
      (php_identifier))))

==================
var declaration: union
==================
{# @var someVar int | \Foo\Bar #}
---
(template
  (var_declaration
    (variable)
    (union_type
      (primitive_type)
      (qualified_name
        (namespace
          (php_identifier))
        (php_identifier)))))


==================
var declaration: intersection
==================
{# @var someVar int & string #}
---
(template
  (var_declaration
    (variable)
    (intersection_type
      (primitive_type)
      (primitive_type))))


==================
var declaration: incomplete primitive
==================
{# @var someVar str #}
---
(template
  (var_declaration
    (variable)
    (incomplete_type)))

==================
var declaration: incomplete_qualified_name
==================
{# @var someVar \App\Something\ #}
---
(template
  (var_declaration
    (variable)
    (incomplete_type
      (namespace
        (php_identifier)
        (php_identifier)))))

==================
var declaration: incomplete_qualified_name - backslash \
==================
{# @var someVar \ #}
---
(template
  (var_declaration
    (variable)
    (incomplete_type
      (namespace))))

==================
var declaration: array_type
==================
{# @var items \Foo\Bar[] #}
---
(template
  (var_declaration
    (variable)
    (array_type
      (qualified_name
        (namespace
          (php_identifier))
        (php_identifier)))))

==================
var declaration: incomplete_qualified_name in union
==================
{# @var someVar \App\SomeClass | \App\ #}
---
(template
  (var_declaration
    (variable)
    (union_type
      (qualified_name
        (namespace
          (php_identifier))
        (php_identifier))
      (incomplete_type
        (namespace
          (php_identifier)))
    )))
